--- a/Media/index.html
+++ b/Media/index.html
@@ -64,8 +64,10 @@
 	<a href="../images/media/scrum.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Failed stand-up meeting"><img src="../images/media/thumbs/scrum.jpg"></a>
 	<a href="../images/media/vacbot.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Vacuum bot"><img src="../images/media/thumbs/vacbot.jpg"></a>
 	<a href="../images/media/wormhole.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="First instance of the wormhole bug"><img src="../images/media/thumbs/wormhole.jpg"></a>
+	<a href="https://www.youtube.com/embed/88ut7mWr3_o" class="fancybox.iframe fancy-gallery" data-fancybox-group="gallery" title="Rigging the Eyes"><img src="http://img.youtube.com/vi/88ut7mWr3_o/0.jpg"></a>	
 	<a href="https://www.youtube.com/embed/tt483XEo5cg" class="fancybox.iframe fancy-gallery" data-fancybox-group="gallery" title="Lighting Demonstration"><img src="http://img.youtube.com/vi/tt483XEo5cg/0.jpg"></a>
 	<a href="https://www.youtube.com/embed/_oeuyI6cLV4" class="fancybox.iframe fancy-gallery" data-fancybox-group="gallery" title="Gates Demonstration"><img src="http://img.youtube.com/vi/_oeuyI6cLV4/0.jpg"></a>
+	
 </div>
 </div>
 </body>
