download page and minor style tweaks

--- a/About/index.html
+++ b/About/index.html
@@ -14,7 +14,7 @@
 		<li><a href="../About/">About</a></li>
 		<li><a href="../Media/">Media</a></li>
 		<li><a href="../Faq/">FAQ</a></li>
-		<li><a href="http://reddit.com/r/blobgame" target="_blank">r/blobgame</a></li>
+		<li><a href="http://reddit.com/r/blobgame" target="_blank">/r/blobgame</a></li>
 	</ul>
 </nav>
 <div class="box" style="padding-top:0px;">
@@ -22,10 +22,10 @@
 <h1>About Blob Game</h1>
 
 <p>
-The first versions of Blob Game were made by Ben Pietrzak in <a href="../classic/blob.html">2007</a>, <a href="../classic/blob2.html">2010</a>, and <a href="../classic/blob3.html">2012</a>.  Work on the current version began in January 2013 by a team of Purdue University students:
+The first versions of Blob Game were made by Ben Pietrzak in <a href="../classic/blob.html" target="_blank">2007</a>, <a href="../classic/blob2.html" target="_blank">2010</a>, and <a href="../classic/blob3.html" target="_blank">2012</a>.  Work on the current version began in January 2013 by a team of Purdue University students:
 </p>
 
-<div>
+<div style="float:left;">
 <div class="floated_img">
 <img id="q" src="../images/team/ben.jpg">
 <h2>Ben Pietrzak</h2>
