--- a/Download/index.html
+++ b/Download/index.html
@@ -14,7 +14,7 @@
 		<li><a href="../About/">About</a></li>
 		<li><a href="../Media/">Media</a></li>
 		<li><a href="../Faq/">FAQ</a></li>
-		<li><a href="http://reddit.com/r/blobgame" target="_blank">r/blobgame</a></li>
+		<li><a href="http://reddit.com/r/blobgame" target="_blank">/r/blobgame</a></li>
 	</ul>
 </nav>
 <div class="box" style="padding-top:0px;">
