--- a/About/index.html
+++ b/About/index.html
@@ -3,7 +3,7 @@
 	<link href="about.css" rel="stylesheet" type="text/css" media="all">
 	<script src="../js/jquery.js"></script>
 	<link rel="icon" href="../images/icon.png" type="image/png" sizes="128x128">
-	<title>Blob Game</title>
+	<title>About Blob Game</title>
 </head>
 <body>
 <div id="wrapper">
