--- a/Media/index.html
+++ b/Media/index.html
@@ -2,7 +2,7 @@
 	<link href="../css/style.css" rel="stylesheet" type="text/css" media="all">
 	<link href="media.css" rel="stylesheet" type="text/css" media="all">
 	<link rel="icon" href="../images/icon.png" type="image/png" sizes="128x128">
-	<title>Blob Game</title>
+	<title>Blob Game Media</title>
 	
 	<!-- Add jQuery library -->
 	<script type="text/javascript" src="../js/jquery-1.10.1.min.js"></script>
