--- a/Faq/index.html
+++ b/Faq/index.html
@@ -30,7 +30,7 @@
 </header>
 <h2 id="Prefs"><b>How do I modify my game preferences?</b></h2>
 <p>Below is the contents of a sample preference file, change a value to <b>0</b> to disable a feature, <b>1</b> to enable, or set an <b>integer value</b> for width and height. Remember to save after any changes. You can return to the default values by deleting the BlobPref.txt file and running the game.</p>
-<code style="width:150px;">
+<code style="width:160px;">
 	{
 	<span>"fullscreen":1,</span>
 	<span>"height":720,</span>
@@ -38,6 +38,7 @@
 	<span>"useLights":1,</span>
 	<span>"vSyncEnabled":1,</span>
 	<span>"useGL20":1,</span>
+	<span>"useCalmColors":0</span>
 	<span>"usePreload":1</span>
 	}
 </code>
