added SS's to FAQ

--- a/Faq/index.html
+++ b/Faq/index.html
@@ -25,6 +25,7 @@
 	<li><a href="#Prefs" rel="internal">How do I modify my game preferences?</a></li>
 	<li><a href="#Fast" rel="internal">How do I make the game run faster?</a></li>
 	<li><a href="#Controller" rel="internal">How do I play with a controller?</a></li>
+	<li><a href="#Screenshot" rel="internal">How do I take a screenshot?</a></li>
 </ul>
 <hr>
 </header>
@@ -52,7 +53,7 @@
 <img src="../images/mac_open_pref.png">
 <br>
 <h3>Linux:</h3>
-<p>In <b>Terminal</b>, enter <b>vim $home/.BlobGame/BlobPref.txt</b></p>
+<p>In <b>Terminal</b>, enter <b>vim ~/.BlobGame/BlobPref.txt</b></p>
 <br>
 <h2 id="Fast"><b>How do I make the game run faster?</b></h2>
 <p> Check if your computer has both integrated graphics and a dedicated graphics card.  Make sure that your system is using the dedicated card for Blob Game. </p>
@@ -62,6 +63,15 @@
 <p> First, make sure any Bluetooth or USB controller is connected <b>before</b> running Blob Game. </p>
 <p> If the game detects a controller, the configure controller button will appear on the main menu screen. </p>
 <p> Click this button and follow the instructions to configure your controller.  This step only needs to be done once for each type of controller that you are using.</p>
+<br>
+<h2 id="Screenshot"><b>How do I take a Screenshot?</b></h2>
+<p> Pressing the <b>F12</b> key will take a screenshot.  You'll see the game stutter for a split second as it saves the picture.</p>
+<h3>Windows:</h3>
+<p>Click the <b>Start</b> button and enter <b>%userprofile%/.BlobGame/Screenshots/</b> into the search box to view your screenshots.</p>
+<h3>Mac:</h3>
+<p>In <b>Finder</b>, use the shortcut <b>&#8679;&#8984;G</b> and enter <b>~/.BlobGame/Screenshots</b> to navigate to the screenshots folder in your home directory.</p>
+<h3>Linux:</h3>
+<p>Your screenshots are stored in <b>~/.BlobGame/Screenshots/</b>
 </article>
 </div>
 </div>
