updated about section

--- a/About/index.html
+++ b/About/index.html
@@ -57,16 +57,26 @@ The first versions of Blob Game were made by Ben Pietrzak in <a href="../classic
 </div>
 
 </div>
+
 <p>
 With contributions by: Matthew Crabill, Tyler Wolverton, Lee Opfer, Eric Todd, Anshi Chitransh, and Tyler Springer.
 </p>
+</br>
+<p>
+In order to make the game accessible to non-english speakers and younger audiences, we designed Blob Game to contain no words or numbers.  Only pictorial instructions are used to teach players how to play.  We've also made sure that Blob Game is a family friendly game.  However, this website may contain <a href="../images/logobrainstorm.png">occasional</a> <a href="../images/media/butts.jpg">butts</a>.</p>
 
 <p>
-Blob Game is distributed under the <a href="http://www.apache.org/licenses/LICENSE-2.0.html">Apache 2.0 Licence</a> and free from any form of monetization.
+We plan to release our graphical level editor in the next update to allow other blobbers to create their own maps and stories.  We're also considering releasing the full source code once we've cleaned it up a bit.
 </p>
 
 <p>
+Blob Game is distributed under the <a href="http://www.apache.org/licenses/LICENSE-2.0.html">Apache 2.0 Licence</a> and free from any form of monetization.  We pay for all development and distribution costs out of our own pockets, so please torrent the game instead of downloading it from us directly.</p>
+
+<p>
 Blob Game was written in Java using <a href="http://libgdx.badlogicgames.com/">libgdx</a>, <a href="http://box2d.org/">Box2D</a>, <a href="https://code.google.com/p/box2dlights/">box2Dlights<a>, and <a href="https://code.google.com/p/reflections/">reflections</a>.
+</p>
+
+<p> Feel free to contact us about anything at <a href="mailto:blobbers@blob-game.com">blobbers@blob-game.com</a> .
 </p>
 
 </article>
