removed butts and fixed tense

--- a/About/index.html
+++ b/About/index.html
@@ -63,7 +63,8 @@ With contributions by: Matthew Crabill, Tyler Wolverton, Lee Opfer, Eric Todd, A
 </p>
 </br>
 <p>
-In order to make the game accessible to non-english speakers and younger audiences, we designed Blob Game to contain no words or numbers.  Only pictorial instructions are used to teach players how to play.  We've also made sure that Blob Game is a family friendly game.  However, this website may contain <a href="../images/logobrainstorm.png">occasional</a> <a href="../images/media/butts.jpg">butts</a>.</p>
+In order to make the game accessible to non-english speakers and younger audiences, we designed Blob Game to contain no words or numbers. Only pictorial instructions were used to teach players how to play.  We've also made sure that Blob Game is a family friendly game.
+</p>
 
 <p>
 We plan to release our graphical level editor in the next update to allow other blobbers to create their own maps and stories.  We're also considering releasing the full source code once we've cleaned it up a bit.
