--- a/Media/index.html
+++ b/Media/index.html
@@ -57,7 +57,7 @@
 	<a href="../images/media/concave.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Rendering a concave blob"><img src="../images/media/thumbs/concave.jpg"></a>
 	<a href="../images/media/suchanimation.gif" class="fancy-gallery" data-fancybox-group="gallery" title="Such animation"><img src="../images/media/suchanimation.gif"></a>
 	<a href="../images/media/suchanimation2.gif" class="fancy-gallery" data-fancybox-group="gallery" title="Wow... much improved"><img src="../images/media/suchanimation2.gif"></a>
-	<a href="../images/media/butts.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Marketing brainstorm"><img src="../images/media/thumbs/butts.jpg"></a>
+	<a href="../images/media/closing.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Spoilers!"><img src="../images/media/thumbs/closing.jpg"></a>
 	<a href="../images/media/knight.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Blob knight"><img src="../images/media/thumbs/knight.jpg"></a>
 	<a href="../images/media/horse.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Also a blob knight"><img src="../images/media/thumbs/horse.jpg"></a>
 	<a href="../images/media/aot.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Three dimensional maneuver gear blob"><img src="../images/media/thumbs/aot.jpg"></a>
