added 2 more vids

--- a/Media/index.html
+++ b/Media/index.html
@@ -67,7 +67,8 @@
 	<a href="https://www.youtube.com/embed/88ut7mWr3_o" class="fancybox.iframe fancy-gallery" data-fancybox-group="gallery" title="Rigging the Eyes"><img src="http://img.youtube.com/vi/88ut7mWr3_o/0.jpg"></a>	
 	<a href="https://www.youtube.com/embed/tt483XEo5cg" class="fancybox.iframe fancy-gallery" data-fancybox-group="gallery" title="Lighting Demonstration"><img src="http://img.youtube.com/vi/tt483XEo5cg/0.jpg"></a>
 	<a href="https://www.youtube.com/embed/_oeuyI6cLV4" class="fancybox.iframe fancy-gallery" data-fancybox-group="gallery" title="Gates Demonstration"><img src="http://img.youtube.com/vi/_oeuyI6cLV4/0.jpg"></a>
-	
+	<a href="https://www.youtube.com/embed/fkZAeYaX1DI" class="fancybox.iframe fancy-gallery" data-fancybox-group="gallery" title="Cannon Bot"><img src="http://img.youtube.com/vi/fkZAeYaX1DI/0.jpg"></a>
+	<a href="https://www.youtube.com/embed/WP_-FEdREHU" class="fancybox.iframe fancy-gallery" data-fancybox-group="gallery" title="Cannon Bot"><img src="http://img.youtube.com/vi/WP_-FEdREHU/0.jpg"></a>
 </div>
 </div>
 </body>
