About pics updated

--- a/About/index.html
+++ b/About/index.html
@@ -52,7 +52,7 @@ The first versions of Blob Game were made by Ben Pietrzak in <a href="../classic
 </div>
 
 <div class="floated_img">
-<img id="q" src="../images/team/james.jpg">
+<img id="q" src="../images/team/harrison.jpg">
 <h2>Harrison Gentry</h2>
 </div>
 
