updated about and youtube embed

--- a/About/index.html
+++ b/About/index.html
@@ -67,17 +67,17 @@ In order to make the game accessible to non-english speakers and younger audienc
 </p>
 
 <p>
-We plan to release our graphical level editor in the next update to allow other blobbers to create their own maps and stories.  We're also considering releasing the full source code once we've cleaned it up a bit.
+We <a href="https://github.com/underclocker/Blob-Game">open sourced Blob Game</a>, but made almost no effort to clean it up.  We did this to honestly demonstrate our project's development.
 </p>
 
 <p>
-Blob Game is distributed under the <a href="http://www.apache.org/licenses/LICENSE-2.0.html">Apache 2.0 Licence</a> and free from any form of monetization.  We pay for all development and distribution costs out of our own pockets, so please torrent the game instead of downloading it from us directly.</p>
+Blob Game is distributed under the <a href="http://www.apache.org/licenses/LICENSE-2.0.html">Apache 2.0 Licence</a> and free from any form of monetization.</p>
 
 <p>
 Blob Game was written in Java using <a href="http://libgdx.badlogicgames.com/">libgdx</a>, <a href="http://box2d.org/">Box2D</a>, <a href="https://code.google.com/p/box2dlights/">box2Dlights<a>, and <a href="https://code.google.com/p/reflections/">reflections</a>.
 </p>
 
-<p> Feel free to contact us about anything at <a href="mailto:blobbers@blob-game.com">blobbers@blob-game.com</a> .
+<p> Feel free to contact us about anything at <a href="mailto:blobbers@blobgame.com">blobbers@blobgame.com</a> .
 </p>
 
 </article>
